arhiv/src/ui/index.css
@import 'tailwindcss';

@import './components/Button.css';
@import './components/Dialog.css';
@import './components/Markup.css';
@import './components/Form/Editor/index.css';
@import './components/Form/Form.css';

@import './ComponentsDemo.css';
@import './Workspace/CardContainer.css';

/* Apply dark theme styles when there's .dark class in html tree */
@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --breakpoint-xs: 21rem;
}

@utility var-bg-color {
  @apply bg-white dark:bg-gray-900;
}

@utility var-bg-secondary-color {
  @apply bg-zinc-100 dark:bg-gray-800;
}

@utility var-bg-tertiary-color {
  @apply bg-zinc-100 dark:bg-zinc-900;
}

@utility var-card-width {
  width: 39rem;
  max-width: 98vw;
}

@utility var-active-color {
  @apply text-blue-800 dark:text-blue-300;
}

@utility var-active-color-hover {
  @apply hover:text-blue-600;
}

@utility var-item-active-bg-color {
  @apply bg-blue-100 dark:bg-blue-900;
}

@utility var-placeholder-color {
  @apply text-gray-500;
}

@utility var-form-border-color {
  @apply border-gray-200 dark:border-zinc-700;
}

@utility var-form-error-border {
  @apply border border-red-500;
}

@utility var-text-heading-color {
  @apply text-slate-900 dark:text-slate-100;
}

@utility buttons {
  @apply flex justify-end gap-8;
  @apply p-2 sm:p-4 md:p-6;
}

@utility custom-focus {
  @apply outline-hidden ring-2 ring-blue-600/75;
}

@utility custom-scrollbar {
  --sb-track-color: transparent;
  --sb-thumb-color: rgb(156 163 175);
  --sb-size: 4px;

  /* for Firefox */
  scrollbar-width: thin;
  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
  /* --- */

  &::-webkit-scrollbar {
    width: var(--sb-size);
    height: var(--sb-size);
  }

  &::-webkit-scrollbar-track {
    background: var(--sb-track-color);
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb {
    background: var(--sb-thumb-color);
    border-radius: 10px;
  }
}

@utility break-anywhere {
  overflow-wrap: anywhere;
}

@layer components {
  .heading-1 {
    @apply text-xl font-bold tracking-tight var-text-heading-color;
  }

  .heading-2 {
    @apply text-lg font-semibold tracking-tight var-text-heading-color;
  }

  .section-heading {
    @apply uppercase font-mono text-gray-400 text-xs tracking-widest;
  }

  .icon {
    @apply inline h-5 w-5;
  }

  .document-head {
    @apply relative text-sm grow-0 shrink-0;

    & td {
      @apply pb-1 tracking-wide;
    }

    & td:first-child {
      text-align: right;
      padding-right: 0.6rem;
      padding-bottom: 0;
      vertical-align: middle;
    }
  }

  .audio-player {
    @apply bg-stone-100;

    & button {
      @apply text-gray-600 hover:text-sky-800;

      &[disabled] {
        @apply text-gray-300 hover:text-gray-300;
      }
    }

    & input[type='range'] {
      @apply block h-2 bg-blue-100 appearance-none cursor-pointer rounded-md;

      &[disabled] {
        @apply cursor-default;
      }
    }
  }

  .sm-selectable {
    @apply transition-colors;

    &[data-selected='true'] {
      @apply var-item-active-bg-color;
    }
  }
}

@layer base {
  *,
  ::before,
  ::after {
    @apply border-solid var-form-border-color;
  }

  :focus-visible {
    @apply custom-focus;
  }

  /* make taps faster - browser doesn't wait 300ms for double-tap to zoom */
  a,
  button {
    touch-action: manipulation;
  }

  [hidden] {
    display: none !important;
  }

  html,
  body {
    margin: 0;
    padding: 0;

    height: fit-content;
    width: fit-content;

    text-rendering: optimizeLegibility;
    @apply antialiased;

    @apply text-slate-800 dark:text-slate-100;
    @apply var-bg-secondary-color;

    font-size: 16px;
  }

  main {
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    position: relative;
    z-index: 1;
  }
}

